welcome.lessons.welcome.bat.bool2.AlarmClock.scala.error
alarmClock:5: error: reassignment to val
    if(day=7 || day==6)
          ^alarmClock:12: error: reassignment to val
    if(day=7 || day==6)
          ^